fix: update primary color variables and improve button z-index for better layering

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,8 +56,8 @@
   --foreground: #000;
   --card: #fff;
   --card-foreground: #000;
-  --primary: #3352ff;
-  --primary-hover: #3352ff;
+  --primary: #1d3fff;
+  --primary-hover: #1d3fff;
   --primary-foreground: #000;
   --secondary: #000;
   --secondary-foreground: #fff;
@@ -76,14 +76,14 @@
   --foreground: #f5f5f5;
   --card: #242424;
   --card-foreground: #f5f5f5;
-  --primary: #3352ff;
-  --primary-hover: #3352ff;
+  --primary: #1d3fff;
+  --primary-hover: #1d3fff;
   --primary-foreground: #000;
   --secondary: #3a3a3a;
   --secondary-foreground: #f5f5f5;
   --muted: #3f3f46;
   --muted-foreground: #a0a0a0;
-  --accent: #3352ff;
+  --accent: #1d3fff;
   --accent-foreground: #000;
   --destructive: #e63946;
   --destructive-foreground: #fff;
@@ -195,10 +195,6 @@
 
 .old-scrollbar::-webkit-scrollbar-track {
   background-color: #f0f0f0; /* track */
-}
-
-img {
-  mix-blend-mode: multiply;
 }
 
 .noise > div {
